--- a/plugins/org.eclipse.embedcdt.managedbuild.cross.arm.ui/src/org/eclipse/embedcdt/internal/managedbuild/cross/arm/ui/messages.properties
+++ b/plugins/org.eclipse.embedcdt.managedbuild.cross.arm.ui/src/org/eclipse/embedcdt/internal/managedbuild/cross/arm/ui/messages.properties
@@ -69,7 +69,7 @@ ProjectToolchainsPathPropertiesPage_ToolchainMessageAllConfigs_label=Toolchain u
 ProjectToolchainsPathPropertiesPage_ToolchainMessageSomeConfigs_label=Toolchain used in this project by the following configurations: {0}
 ProjectToolchainsPathPropertiesPage_WorkspaceSettings_link=<a>Configure Workspace Settings...</a>\n
 ProjectToolchainsPathsPropertiesPage_description=\
-Configure the location where various GNU ARM toolchains are installed. \
+Configure the location where various GNU Arm toolchains are installed. \
 A path specified on this page is stored in the project and override the workspace or global paths.\n\
 As the toolchain locations specified here are stored in the project, it is generally not a good idea to \
 specify paths here. Instead prefer to specify toolchain locations either at the Workspace or Global \
@@ -78,7 +78,7 @@ Only the toolchains in use by this project are shown on this page.\
 \n
 
 WorkspaceToolchainsPathsPreferencesPage_description=\
-Configure the locations where various GNU ARM toolchains are installed. \
+Configure the locations where various GNU Arm toolchains are installed. \
 A path specified on this page is stored in the workspace and override the global paths. \
 Unless redefined per project, they are used for all \
 projects in this workspace.\n\
@@ -86,7 +86,7 @@ Only the toolchains in use by projects in the workspace are shown on this page. 
 \n
 
 GlobalToolchainsPathsPreferencesPage_description=\
-Configure the locations where various GNU ARM toolchains are installed. \
+Configure the locations where various GNU Arm toolchains are installed. \
 The values are stored within Eclipse. \
 Unless redefined more specifically, they are used for all \
 projects in all workspaces.\n\
